--- a/package.json
+++ b/package.json
@@ -20,13 +20,18 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@types/react-redux": "^7.1.16",
-    "@types/redux": "^3.6.0",
-    "@types/redux-logger": "^3.0.8",
-    "@types/redux-thunk": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
+    "antd": "^4.15.0",
     "eslint": "^7.2.0",
+    "moment": "^2.29.1",
+    "mobx": "^6.0.4",
+    "formik": "^2.2.6",
+    "swiper": "^6.4.8",
+    "axios": "^0.21.1",
+    "bignumber.js": "^9.0.1",
+    "mobx-react-lite": "^3.1.6",
+    "mobx-state-tree": "^5.0.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -43,11 +48,7 @@
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
     "react-scripts": "4.0.3",
-    "redux": "^4.0.5",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
     "stylelint": "^13.3.3",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
