header, home preview, top bids, top filters

--- a/package.json
+++ b/package.json
@@ -17,21 +17,17 @@
     "lint-fix:scss": "stylelint \"src/**/*.scss\" --fix"
   },
   "dependencies": {
+    "@types/classnames": "^2.2.11",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
     "antd": "^4.15.0",
-    "eslint": "^7.2.0",
-    "moment": "^2.29.1",
-    "mobx": "^6.0.4",
-    "formik": "^2.2.6",
-    "swiper": "^6.4.8",
     "axios": "^0.21.1",
     "bignumber.js": "^9.0.1",
-    "mobx-react-lite": "^3.1.6",
-    "mobx-state-tree": "^5.0.0",
+    "eslint": "^7.2.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -42,18 +38,25 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
     "eslint-plugin-simple-import-sort": "^5.0.2",
+    "formik": "^2.2.6",
+    "mobx": "^6.0.4",
+    "mobx-react-lite": "^3.1.6",
+    "mobx-state-tree": "^5.0.0",
+    "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "npm-run-all": "^4.1.5",
     "pre-commit": "^1.2.2",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "stylelint": "^13.3.3",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.1.0",
     "stylelint-prettier": "^1.1.2",
+    "swiper": "^6.4.8",
     "typescript": "^4.1.2"
   },
   "devDependencies": {
