--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-virtualized": "^9.21.11",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
     "antd": "^4.15.0",
@@ -39,6 +40,7 @@
     "eslint-plugin-react-hooks": "^2.5.0",
     "eslint-plugin-simple-import-sort": "^5.0.2",
     "formik": "^2.2.6",
+    "masonic": "^3.4.1",
     "mobx": "^6.0.4",
     "mobx-react-lite": "^3.1.6",
     "mobx-state-tree": "^5.0.0",
@@ -51,6 +53,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-virtualized": "^9.22.3",
     "stylelint": "^13.3.3",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
