--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@types/react-virtualized": "^9.21.11",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
+    "@walletconnect/client": "^1.4.1",
+    "@walletconnect/qrcode-modal": "^1.4.1",
+    "@walletconnect/web3-provider": "^1.4.1",
     "antd": "^4.15.0",
     "axios": "^0.21.1",
     "bignumber.js": "^9.0.1",
@@ -56,13 +59,17 @@
     "react-router-hash-link": "^2.4.0",
     "react-scripts": "4.0.3",
     "react-virtualized": "^9.22.3",
+    "rxjs": "^6.6.7",
+    "string_decoder": "^1.3.0",
     "stylelint": "^13.3.3",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.1.0",
     "stylelint-prettier": "^1.1.2",
     "swiper": "^6.4.8",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "walletconnect": "^1.4.1",
+    "web3": "^1.3.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -72,6 +79,7 @@
     "jest-html-reporter": "^3.3.0",
     "jest-junit": "^12.0.0",
     "lint-staged": "^10.5.4",
+    "react-id-generator": "^3.0.1",
     "remark-preset-lint-recommended": "^5.0.0",
     "ts-jest": "^26.5.3"
   },
