--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint-fix:scss": "stylelint \"src/**/*.scss\" --fix"
   },
   "dependencies": {
+    "@react-hook/window-size": "^3.0.7",
     "@types/classnames": "^2.2.11",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
@@ -58,6 +59,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.4.0",
     "react-scripts": "4.0.3",
     "react-virtualized": "^9.22.3",
     "rxjs": "^6.6.7",
