--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.4.0",
     "react-scripts": "4.0.3",
+    "react-scrollbars-custom": "^4.0.25",
     "react-virtualized": "^9.22.3",
     "rxjs": "^6.6.7",
     "string_decoder": "^1.3.0",
